crates/keron-lang/tests/corpus/errors/check/read_file_non_nullable_assign.snap
---
source: crates/keron-lang/tests/harness/mod.rs
---
error: type mismatch: expected `String`, found `String?`
  --> 4:22
  |
4 | val direct: String = read_file("./partials/header.txt")
  |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
